# mini-tcl.lua

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  bin2c.c  build.zig  canvas.lua  main-sdl.c  main-wasm.c  main.c  mini-tcl-handoff.md  mini-tcl.lua  tk.lua  wasm-glue.lua
.github/workflows/: ci.yml  pages.yml  release.yml
cmake/: embed.cmake
docs/: glue-wish.lua  glue.lua  index.html  repl.js  style.css  wish.html  wish.js
examples/: canvas-demo.tcl  tk-demo.tcl
tests/: run-tests.sh  smoke.expected  smoke.tcl  tk-headless.lua  tk-layout.expected  tk-layout.tcl  tk-web-headless.lua  wasm-smoke.mjs
